--- a/wiki/thumb.wikitext
+++ b/wiki/thumb.wikitext
@@ -28,7 +28,7 @@
 *Finnish: [[peukalo]] ''m''
 *French: [[pouce]] ''m''
 *[[Frisian]]: [[tomme]]
-*German: [[Daumen]] ''m''
+*German: [[Daumen]] ''m'' [[:de:Daumen|(de)]]
 *Indonesian: [[ibu]] [[jari]]
 *[[Interlingua]]: [[pollice]]
 *Italian: [[pollice]] ''m''
