--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -22,6 +22,7 @@
 {|
 *Catalan: [[estimar]], [[voler]]
 *Chinese: [[爱]]/[[愛]] (ai), [[热爱]]/[[熱愛]] (re'ai)
+*Czech: [[milovat]]
 *Estonian: [[armastama]]
 *Filipino: [[umibig]]
 *Finnish: [[rakastaa]]
@@ -74,6 +75,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Czech: [[milovat se]]
 *Finnish: [[mennä]] [[sänky|sänkyyn]] [[joku|jnk]] [[kanssa]], [[rakastella]] jnk kanssa
 *French: [[coucher]] avec
 *German: mit &hellip; [[schlafen]]
