--- a/wiki/acqua.wikitext
+++ b/wiki/acqua.wikitext
@@ -1,5 +1,15 @@
 ==Italian==
+===Etymology===
+Latin ''[[aqua]]''
 ===Noun===
 '''acqua''' ''f''
 
 #[[water]]
+
+===Related terms===
+*[[acquaio]]
+*[[acquaiolo]]
+*[[acquario]]
+*[[acquatico]]
+*[[acqueo]]
+*[[acquoso]]
