--- a/wiki/marketing.wikitext
+++ b/wiki/marketing.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-#The actions of a company to advance sales of it's products
+#The actions of a company to advance sales and/or recognition of it's products
 
 ===Translations===
 *Finnish: [[markkinointi]]
