--- a/wiki/ira.wikitext
+++ b/wiki/ira.wikitext
@@ -1,21 +1,1 @@
-==Italian==
-===Noun===
-'''ira''' ''f''
-
-#[[ire]]
-
-----
-==Latin==
-===Noun===
-'''īra, [[Wiktionary Appendix:Latin first declension|īrae]]''' ''f''
-
-#[[anger]]
-
-====Related terms====
-=====Latin=====
-*[[iracundus]]
-*[[irasci]]
-
-=====English=====
-*[[irate]]
-*[[ire]]
+Irish Republican Army
