+ia +pt +la <lord#43605>

--- a/wiki/lord.wikitext
+++ b/wiki/lord.wikitext
@@ -1,6 +1,9 @@
 ===Noun===
 ====Translations====
-*{{hu}}: [[úr]]
+*Hungarian: [[úr]]
+*[[Interlingua]]: [[senior]]
+*Latin: [[dominus]] ''m''
+*Portuguese: senhor ''m''
 *[[Slovak]]: [[pán]]
 
 ===Verb===
