wikifying pt translation <lord#43605>

--- a/wiki/lord.wikitext
+++ b/wiki/lord.wikitext
@@ -3,7 +3,7 @@
 *Hungarian: [[úr]]
 *[[Interlingua]]: [[senior]]
 *Latin: [[dominus]] ''m''
-*Portuguese: senhor ''m''
+*Portuguese: [[senhor]] ''m''
 *[[Slovak]]: [[pán]]
 
 ===Verb===
