ia entry <senior#47152>

--- a/wiki/senior.wikitext
+++ b/wiki/senior.wikitext
@@ -1,16 +1,25 @@
 ==English==
 ===Etymology===
 Comparative form, from Latin ''[[senex]]'', '''old'''
-
 ===Adjective===
 '''senior'''
 #[[older]]
-
 ====Antonyms====
 *[[junior]]
-
 ====Translations====
 *{{msg:fi}}: [[vanhempi]]
+
+----------
+
+==Interlingua==
+===Etymology===
+From Latin ''[[senior#Latin|senior]]'' "older"
+===Adjective===
+# [[older]]
+===Noun===
+# [[lord]]
+===Treatment?===
+# [[mister]]
 
 ----------
 
