--- a/wiki/%D8%AD%D8%B3%D9%86.wikitext
+++ b/wiki/%D8%AD%D8%B3%D9%86.wikitext
@@ -18,8 +18,10 @@
 # to know how to use, to be able to use, to know
 
 ===Verb===
-'''تَحَسَّنَ''' (taɧássana) ''v.i., Stem V, 3rd masc. sg. perfective''
+'''تَحَسَّنَ''' (taɧássana) ''reflexive, Stem V, 3rd masc. sg. perfective''
 
+# to [[improve]]
+# to get better
 # to [[ameliorate]]
 # to [[reform]]
 
