--- a/wiki/abandonar_se.wikitext
+++ b/wiki/abandonar_se.wikitext
@@ -1,19 +1,16 @@
 ==[[Interlingua]]==
 ===Verb===
-'''abandonar_se'''
-
+'''abandonar se'''
 # to [[indulge]] in
 
-==[[Portuguese]]==
+==Portuguese==
 ===Verb===
-'''abandonarse'''
-
+'''abandonar-se'''
 # to [[indulge]] in
 
 ==[[Romanica]]==
 ===Verb===
-'''abandonar_se'''
-
+'''abandonar se'''
 # to [[indulge]] in
 
 ==Vide: [[abandonar]]==
