--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -2,12 +2,15 @@
 ===Verb===
 '''こう''': kou
 
-# [[講う]]: ''(v.t.)'' [[ask]], [[beg]], [[request]], [[entreat]], [[appeal]], [[solicit]]
+# [[請う]]: (''v.t.'', を) [[ask]], [[beg]], [[request]], [[entreat]], [[appeal]], [[solicit]]
 
 ===Adverb===
 '''こう''': kō
 
-# [[こう]]: [[this]], [[so]], [[thus]], [[in this way]]
+# [[this]], [[so]], [[thus]], [[in this way]]
+
+====Related terms===
+*[[この]]
 
 ===Noun===
 '''こう''': kō
