--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -1,19 +1,19 @@
 == Japanese [[Furigana]] ==                             
 ===Verb===
-'''こう''': kou
+'''こう''' (kou)
 
 # [[請う]]: (''v.t.'', を) [[ask]], [[beg]], [[request]], [[entreat]], [[appeal]], [[solicit]]
 
 ===Adverb===
-'''こう''': kō
+'''こう''' (kō)
 
 # [[this]], [[so]], [[thus]], [[in this way]]
 
-====Related terms===
+====Related terms====
 *[[この]]
 
 ===Noun===
-'''こう''': kō
+'''こう''' (kō)
 
 # [[口]]: [[mouth]], [[opening]], [[entrance]], [[hole]]; [[kind]], [[sort]]; [[job]]
 # [[工]]: [[work]], [[craft]], [[art]], [[skill]]; [[workman]], [[artisan]]
