--- a/wiki/ira.wikitext
+++ b/wiki/ira.wikitext
@@ -1,5 +1,28 @@
-==English==
-===Abbreviation===
-'''IRA'''
+==Italian==
+===Noun===
+'''ira''' ''f''
 
-# [[Irish Republican Army]]
+#[[ire]], [[anger]]
+
+===Related terms===
+*[[iracondo]]
+*[[irascibile]]
+*[[irato]]
+*[[iroso]]
+
+----
+
+==Latin==
+===Noun===
+'''īra, [[Wiktionary Appendix:Latin first declension|īrae]]''' ''f''
+
+#[[anger]]
+
+====Related terms====
+=====Latin=====
+*[[iracundus]]
+*[[irasci]]
+
+=====English=====
+*[[irate]]
+*[[ire]]
