--- a/wiki/bling_bling.wikitext
+++ b/wiki/bling_bling.wikitext
@@ -5,4 +5,6 @@
 ====Variant forms====
 *'''bling'''
 
-#(''slang'') Something that shows money, usually large items of jewelry (rings, necklaces, etc.)
+#(''slang'') Something that shows money, usually large items of jewellery (rings, necklaces, etc.)
+
+#(''slang'') Also refers to gold jewellery in particular e.g. neckchains, rings.
