--- a/wiki/bling_bling.wikitext
+++ b/wiki/bling_bling.wikitext
@@ -7,4 +7,4 @@
 
 #(''slang'') Something that shows money, usually large items of jewellery (rings, necklaces, etc.)
 
-#(''slang'') Also refers to gold jewellery in particular e.g. neckchains, rings.
+##(''slang'') Also refers to gold jewellery in particular e.g. neckchains, rings.
