--- a/wiki/%D0%BB%D0%B5%D1%82%D0%BE.wikitext
+++ b/wiki/%D0%BB%D0%B5%D1%82%D0%BE.wikitext
@@ -1,9 +1,9 @@
 ==Russian==
 ===Noun===
-'''ле́то''' ''n'' (léto)
+'''ле́то''' ''n'' (l'éto)
 
 # [[summer]]
 
 ====Derived terms====
-*[[индейское лето|инде́йское ле́то]] ''n'' (indéyskoe léto)
-*[[бабье лето|ба́бье ле́то]] ''n'' (báb'e léto)
+*[[индейское лето|инде́йское ле́то]] ''n'' (ind'éjskoje l'éto)
+*[[бабье лето|ба́бье ле́то]] ''n'' (báb'je l'éto)
