divide hiragana-only entries and hiragana index of kanji <こう#66493>

--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -1,4 +1,4 @@
-== Japanese [[Furigana]] ==                             
+== Japanese ==
 ===Verb===
 '''こう''' (kou)
 
@@ -12,7 +12,8 @@
 ====Related terms====
 *[[この]]
 
-===Noun===
+===Hiragana===
+====Noun====
 '''こう''' (kō)
 
 # [[口]]: [[mouth]], [[opening]], [[entrance]], [[hole]]; [[kind]], [[sort]]; [[job]]
