--- a/wiki/%E8%AE%B2.wikitext
+++ b/wiki/%E8%AE%B2.wikitext
@@ -20,7 +20,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,6 +34,51 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[講]]
+
+===Compounds===
+*[[讲唱文学]]
+*[[讲道]]
+*[[讲法]]
+*[[讲稿]], [[讲稿儿]]
+*[[讲古]]
+*[[讲和]]
+*[[讲话]]
+*[[讲价]], [[讲价儿]]
+*[[讲价钱]]
+*[[讲交情]]
+*[[讲解]]
+*[[讲究]]
+*[[讲课]]
+*[[讲礼貌]]
+*[[讲理]]
+*[[讲论]]
+*[[讲面子]]
+*[[讲明]]
+*[[讲排场]]
+*[[讲评]]
+*[[讲情]]
+*[[讲求]]
+*[[讲人情]]
+*[[讲师]]
+*[[讲实际]]
+*[[讲史]]
+*[[讲授]]
+*[[讲书]]
+*[[讲述]]
+*[[讲台]]
+*[[讲坛]]
+*[[讲堂]]
+*[[讲题]]
+*[[讲头儿]]
+*[[讲透]]
+*[[讲妥]]
+*[[讲卫生]]
+*[[讲习]]
+*[[讲叙]]
+*[[讲学]]
+*[[讲演]]
+*[[讲义]]
+*[[讲座]]
 
 * '''Other info''': 
 
