--- a/wiki/innocent.wikitext
+++ b/wiki/innocent.wikitext
@@ -1,5 +1,26 @@
-1. Pure, incorrupt, unspoiled, or naiive.
+==English==
+===Etymology===
+Latin ''[[in-]]'', ''[[nocere]]'' hurt
+===Adjective===
+'''innocent'''
 
-2. Not guilty of a crime.
+#Pure, incorrupt, unspoiled, or naïve.
+#Not guilty of a crime.
+#Harmless.
 
-3. Harmless.
+===Related terms===
+*[[innocence]]
+*[[innocently]]
+
+----
+
+==French==
+===Adjective===
+'''innocent''' ''m'', '''[[innocente]]''' ''f''
+
+# innocent
+
+===Related terms===
+*[[innocemment]]
+*[[innocence]]
+*[[innocenter]]
