--- a/wiki/finally.wikitext
+++ b/wiki/finally.wikitext
@@ -6,3 +6,8 @@
 
 #At the end or conclusion; ultimately; lastly; as, the contest was long, but the Romans finally conquered.
 #Completely; beyond recovery.
+
+====Translations====
+*French: [[enfin]], [[finalement]]
+*Latin: [[denique]]
+*Spanish: [[finalmente]]
