/* Translations */ Latin: +quidem <indeed#55398>

--- a/wiki/indeed.wikitext
+++ b/wiki/indeed.wikitext
@@ -19,5 +19,5 @@ From '''in''' + '''[[deed]]''' (similar to ''"in fact"'')
 ====Translations====
 *Finnish: [[todellakin]]
 *French: [[en fait]]
-*Latin: [[vere]]
+*Latin: [[vere]], [[quidem]]
 *Spanish: [[en verdad]], [[verdaderamente]]
