--- a/wiki/Esperanto.wikitext
+++ b/wiki/Esperanto.wikitext
@@ -37,7 +37,7 @@
 *French: [[espéranto]] ''m''
 *German: Esperanto ''n''
 *Greek: [[Εσπεράντο]]
-*Hebrew: [[אספרנטו]]
+*[[Hebrew]]: [[אספרנטו]]
 *Hungarian: [[Eszperantó]]
 *[[Interlingua]]: esperanto
 *[[Irish]]: [[Espeirantó]] ''m''
