--- a/wiki/liber.wikitext
+++ b/wiki/liber.wikitext
@@ -11,8 +11,37 @@
 *[[libertas]]
 ===Noun===
 '''liber, [[Wiktionary Appendix:Latin second declension|librī]]''' ''m''
-
 #a [[book]]
+
+====Declension====
+Second declension (2).
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''M.''
+!style="background:#C0C0C0;"| ''MM.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+|style="background:#F5F5F5;"| <big> liber
+|style="background:#F5F5F5;"| <big> libr&#299;
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+|style="background:#F5F5F5;"| <big> libr&#299;
+|style="background:#F5F5F5;"| <big> libr&#333;rum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+|style="background:#F5F5F5;"| <big> libr&#333;
+|style="background:#F5F5F5;"| <big> libr&#299;s
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+|style="background:#F5F5F5;"| <big> librum
+|style="background:#F5F5F5;"| <big> libr&#333;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+|style="background:#F5F5F5;"| <big> libr&#333;
+|style="background:#F5F5F5;"| <big> libr&#299;s
+|}
+
 ====Related Words====
 *[[librarium]]
 *[[librarius]]
+*[[libellus]]
