/* Noun */ Related words. <libellus#66508>

--- a/wiki/libellus.wikitext
+++ b/wiki/libellus.wikitext
@@ -33,3 +33,6 @@ Second declension (2).
 |style="background:#F5F5F5;"| <big> libell&#333;
 |style="background:#F5F5F5;"| <big> libell&#299;s
 |}
+
+====Related words====
+*[[liber]]
