--- a/wiki/libertas.wikitext
+++ b/wiki/libertas.wikitext
@@ -1,6 +1,6 @@
 ==Latin==
 ===Pronunciation===
-*[[AHD]]: <big> l&#275;-&#275;-b&#277;&prime; r-t&#259;-s </big>
+*[[AHD]]: <big> l&#275;-&#275;-b&#277;&prime; r-t&#259;-&#259;s </big>
 
 ===Noun===
 '''l&#299;bert&#257;s''' ''f''
