--- a/wiki/fumet.wikitext
+++ b/wiki/fumet.wikitext
@@ -1,4 +1,4 @@
-A "fumet" (french for "aroma") is a type of concentrated stock that is added to sauces to enhance their flavor.
+A '''fumet''' ([[French language|French]] for "aroma") is a type of concentrated [[Stock (food)|stock]] that is added to sauces to enhance their flavor.
 
 Fish fumet is a concentrated version of fish stock. It is made with vegetables (leeks, onion, and celery), spices, water, wine, and fish bones (you can use fish heads, but you must remove the eyes). To make it, you "sweat" the vegetables in a pan, then add the fish bones and spices. When the bones start to break down, you add wine and reduce. Then, add the water and proceed as for fish stock (cook for 30-45 minutes, etc).
 
