--- a/wiki/scire.wikitext
+++ b/wiki/scire.wikitext
@@ -6,6 +6,44 @@
 ('''sci&#333;''', '''sc&#299;re''', '''sc&#299;v&#299;''', '''sc&#299;tus''')
 # To [[know]].
 
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=100px| <big> sci&#275;ns
+|style="background:#F7F7F5;" align="center" width=100px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> sc&#299;tus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> sc&#299;t&#363;rus
+|style="background:#F7F7F5;"| <big> sciendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=100px| <big> sc&#299;re
+|style="background:#F7F7F5;" width=100px| <big> sc&#299;r&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> sc&#299;visse
+|style="background:#F7F7F5;"| <big> sc&#299;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> sc&#299;t&#363;rus esse
+|style="background:#F7F7F5;"| <big> sc&#299;tum &#299;r&#299;
+|}
+
 ====Conjugation====
 Fourth conjugation (4).
 {| border="1" cellpadding="2"
