--- a/wiki/debere.wikitext
+++ b/wiki/debere.wikitext
@@ -43,3 +43,195 @@
 |style="background:#F7F7F5;"| <big> d&#275;bit&#363;rus esse
 |style="background:#F7F7F5;"| <big> d&#275;bitum &#299;r&#299;
 |}
+
+====Conjugation====
+Second conjugation (2).
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|d&#275;be&#333;
+|style="background:#FBFCE4;"|d&#275;b&#275;s
+|style="background:#FBFCE4;"|d&#275;bet
+|style="background:#FBFCE4;"|d&#275;b&#275;mus
+|style="background:#FBFCE4;"|d&#275;b&#275;tis
+|style="background:#FBFCE4;"|d&#275;bent
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#333;
+|style="background:#FBFCE4;"|d&#275;b&#275;bis
+|style="background:#FBFCE4;"|d&#275;b&#275;bit
+|style="background:#FBFCE4;"|d&#275;b&#275;bimus
+|style="background:#FBFCE4;"|d&#275;b&#275;bitis
+|style="background:#FBFCE4;"|d&#275;b&#275;bunt
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"|d&#275;b&#275;bam
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;s
+|style="background:#FBFCE4;"|d&#275;b&#275;bat
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;mus
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;tis
+|style="background:#FBFCE4;"|d&#275;b&#275;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"|d&#275;bu&#299;
+|style="background:#FBFCE4;"|d&#275;buist&#299;
+|style="background:#FBFCE4;"|d&#275;buit
+|style="background:#FBFCE4;"|d&#275;buimus
+|style="background:#FBFCE4;"|d&#275;buistis
+|style="background:#FBFCE4;"|d&#275;bu&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"|d&#275;buer&#333;
+|style="background:#FBFCE4;"|d&#275;bueris
+|style="background:#FBFCE4;"|d&#275;buerit
+|style="background:#FBFCE4;"|d&#275;buerimus
+|style="background:#FBFCE4;"|d&#275;bueritis
+|style="background:#FBFCE4;"|d&#275;buerint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"|d&#275;bueram
+|style="background:#FBFCE4;"|d&#275;buer&#257;s
+|style="background:#FBFCE4;"|d&#275;buerat
+|style="background:#FBFCE4;"|d&#275;buer&#257;mus
+|style="background:#FBFCE4;"|d&#275;buer&#257;tis
+|style="background:#FBFCE4;"|d&#275;buerant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|d&#275;beor
+|style="background:#FBFCE4;"|d&#275;b&#275;ris
+|style="background:#FBFCE4;"|d&#275;b&#275;tur
+|style="background:#FBFCE4;"|d&#275;b&#275;mur
+|style="background:#FBFCE4;"|d&#275;b&#275;min&#299;
+|style="background:#FBFCE4;"|d&#275;bentur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"|d&#275;b&#275;bor
+|style="background:#FBFCE4;"|d&#275;b&#275;beris
+|style="background:#FBFCE4;"|d&#275;b&#275;bitur
+|style="background:#FBFCE4;"|d&#275;b&#275;bimur
+|style="background:#FBFCE4;"|d&#275;b&#275;bimin&#299;
+|style="background:#FBFCE4;"|d&#275;b&#275;buntur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"|d&#275;b&#275;bar
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;ris
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;tur
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;mur
+|style="background:#FBFCE4;"|d&#275;b&#275;b&#257;min&#299;
+|style="background:#FBFCE4;"|d&#275;b&#275;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>sum
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>es
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>sumus
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>estis
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>er&#333;
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>eris
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>erimus
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>eritis
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>er&#257;s
+|style="background:#FBFCE4;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis
+|style="background:#FBFCE4;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| d&#275;beam
+|style="background:#E7FEE9;"| d&#275;be&#257;s
+|style="background:#E7FEE9;"| d&#275;beat
+|style="background:#E7FEE9;"| d&#275;be&#257;mus
+|style="background:#E7FEE9;"| d&#275;be&#257;tis
+|style="background:#E7FEE9;"| d&#275;beant
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| d&#275;b&#275;rem
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;s
+|style="background:#E7FEE9;"| d&#275;b&#275;ret
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;mus
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;tis
+|style="background:#E7FEE9;"| d&#275;b&#275;rent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| d&#275;buerim
+|style="background:#E7FEE9;"| d&#275;buer&#299;s
+|style="background:#E7FEE9;"| d&#275;buerit
+|style="background:#E7FEE9;"| d&#275;buer&#299;mus
+|style="background:#E7FEE9;"| d&#275;buer&#299;tis
+|style="background:#E7FEE9;"| d&#275;buerint
+|-
+!style="background:#92B887;"|<small>''Pluerfect''
+|style="background:#E7FEE9;"| d&#275;buissem
+|style="background:#E7FEE9;"| d&#275;buiss&#275;s
+|style="background:#E7FEE9;"| d&#275;buisset
+|style="background:#E7FEE9;"| d&#275;buiss&#275;mus
+|style="background:#E7FEE9;"| d&#275;buiss&#275;tis
+|style="background:#E7FEE9;"| d&#275;buissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| d&#275;bear
+|style="background:#E7FEE9;"| d&#275;be&#257;ris
+|style="background:#E7FEE9;"| d&#275;be&#257;tur
+|style="background:#E7FEE9;"| d&#275;be&#257;mur
+|style="background:#E7FEE9;"| d&#275;be&#257;min&#299;
+|style="background:#E7FEE9;"| d&#275;beantur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| d&#275;b&#275;rer
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;ris
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;tur
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;mur
+|style="background:#E7FEE9;"| d&#275;b&#275;r&#275;min&#299;
+|style="background:#E7FEE9;"| d&#275;b&#275;rentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>sim
+|style="background:#E7FEE9;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>s&#299;s
+|style="background:#E7FEE9;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus
+|style="background:#E7FEE9;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis
+|style="background:#E7FEE9;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"|d&#275;bitus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus
+|style="background:#E7FEE9;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis
+|style="background:#E7FEE9;"|d&#275;bit&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| d&#275;b&#275;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| d&#275;b&#275;te
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = d&#275;bitus / d&#275;bita / d&#275;bitum  <br>
+<font color="red"> 2 </font> = d&#275;bit&#299; / d&#275;bitae / d&#275;bita <br>
