--- a/wiki/owe.wikitext
+++ b/wiki/owe.wikitext
@@ -2,7 +2,7 @@
 ===Verb===
 '''owe'''
 # To be under an obligation to give something back to someone or to perform some action for someone.
-# To have [[debt]].
+# To have [[debt]], to be in debt.
 
 ====Translations====
 *Latin: [[debere]]
