/* Translations */ +French +German <owe#66510>

--- a/wiki/owe.wikitext
+++ b/wiki/owe.wikitext
@@ -5,5 +5,7 @@
 # To have [[debt]], to be in debt.
 
 ====Translations====
+*French: [[devoir]]
+*German: [[schulden]]
 *Latin: [[debere]]
 *Spanish: [[deber]]
