/* Noun */ libellus :: diminutive of liber <liber#38698>

--- a/wiki/liber.wikitext
+++ b/wiki/liber.wikitext
@@ -10,7 +10,7 @@
 *[[liberta]]
 *[[libertas]]
 ===Noun===
-'''liber, [[Wiktionary Appendix:Latin second declension|librī]]''' ''m''
+'''liber, [[Wiktionary Appendix:Latin second declension|librī]]''' ''m'' (diminutive: [[libellus]])
 #a [[book]]
 
 ====Declension====
@@ -44,4 +44,3 @@ Second declension (2).
 ====Related Words====
 *[[librarium]]
 *[[librarius]]
-*[[libellus]]
