--- a/wiki/anonymous.wikitext
+++ b/wiki/anonymous.wikitext
@@ -1,6 +1,14 @@
-===Adjective===
-'''anonymous'''
+== Pronunciation ==
+\A*non"y*mous\
+==Adjective==
+See [[name]]
 
-====Related terms====
-*[[anonymously]]
-*[[anonymity]]
+Nameless; of unknown name; also, of unknown or unavowed
+authorship; as, an anonymous benefactor; an anonymous
+pamphlet or letter.
+
+==Related terms==
+*[[anonymously]].
+*[[anonymity]].
+
+[[es:anónimo]]
