/* Latin */ Declension. <focus#38446>

--- a/wiki/focus.wikitext
+++ b/wiki/focus.wikitext
@@ -99,10 +99,38 @@ These translations are commented out because there is no definition yet on this 
 ==Latin==
 ===Noun===
 '''focus, [[Wiktionary Appendix:Latin second declension|focī]]''' ''m'' (Diminutive: [[foculus]])
-
 #[[hearth]], [[fireplace]]
 
-===Related terms===
+====Declension====
+Second declension (2).
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''M.''
+!style="background:#C0C0C0;"| ''MM.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+|style="background:#F5F5F5;"| <big> focus
+|style="background:#F5F5F5;"| <big> foc&#299;
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+|style="background:#F5F5F5;"| <big> foc&#299;
+|style="background:#F5F5F5;"| <big> foc&#333;rum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+|style="background:#F5F5F5;"| <big> foc&#333;
+|style="background:#F5F5F5;"| <big> foc&#299;s
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+|style="background:#F5F5F5;"| <big> focum
+|style="background:#F5F5F5;"| <big> foc&#333;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+|style="background:#F5F5F5;"| <big> foc&#333;
+|style="background:#F5F5F5;"| <big> foc&#299;s
+|}
+
+
+====Related terms====
 *[[focacius]]
 *[[focarius]]
 *[[focillare]]
