--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -2,12 +2,13 @@
 
 \Pop"u*lar\
 
+{{Wikipedia}}
+
 == Adjective==
  See [[people]]}.]
 1. Of or pertaining to the common people, or to the whole body of the people, as distinguished from a select portion; as, the popular voice; popular elections. 
  ``Popular states.'' --Bacon.
  ``So the popular vote inclines.'' --Milton.
-
  The men commonly held in popular estimation are greatest at a distance. --J. H.                                                 Newman.
 
 2. Suitable to common people; easy to be comprehended; not abstruse; familiar; plain.
@@ -29,3 +30,8 @@
 6. Prevailing among the people; epidemic; as, a popular disease. ([[Obs.]]) --Johnson.
 
 [[w:Popular action|Popular action]]) ([[Law]]), an action in which any person may sue for penalty imposed by statute. --Blackstone.
+
+
+See also: 
+*[[anonymous]].
+*[[w:public domain|public domain]].
