--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -5,7 +5,8 @@
 {{Wikipedia}}
 
 == Adjective==
- See [[people]]}.]
+See [[people]]
+
 1. Of or pertaining to the common people, or to the whole body of the people, as distinguished from a select portion; as, the popular voice; popular elections. 
  ``Popular states.'' --Bacon.
  ``So the popular vote inclines.'' --Milton.
