--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -21,8 +21,7 @@ See [[people]]
 
  The smallest figs, called popular figs, . . . are,  of all others, the basest and of least account.                                                --Holland.
 
-4. Beloved or approved by the people; pleasing to people in general, or to many people; as, a popular preacher; a
-   popular law; a popular administration.
+4. Beloved or approved by the people; pleasing to people in general, or to many people; as, a popular preacher; a popular law; a popular administration.
 
 5. Devoted to the common people; studious of the favor of the populace. [R.]
 
