--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -29,7 +29,8 @@ See [[people]]
 
 6. Prevailing among the people; epidemic; as, a popular disease. ([[Obs.]]) --Johnson.
 
-[[w:Popular action|Popular action]]) ([[Law]]), an action in which any person may sue for penalty imposed by statute. --Blackstone.
+
+* [[w:Popular action|Popular action]]) ([[Law]]), an action in which any person may sue for penalty imposed by statute. -- [[w:Blackstone]].
 
 
 See also: 
