--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -16,8 +16,7 @@ See [[people]]
 
  Homilies are plain popular instructions. --Hooker.
 
-3. Adapted to the means of the common people; possessed or obtainable by the many; hence, cheap; common; ordinary;
-   inferior; as, popular prices; popular amusements.
+3. Adapted to the means of the common people; possessed or obtainable by the many; hence, cheap; common; ordinary; inferior; as, popular prices; popular amusements.
 
  The smallest figs, called popular figs, . . . are,  of all others, the basest and of least account. --Holland.
 
