--- a/wiki/who.wikitext
+++ b/wiki/who.wikitext
@@ -5,10 +5,10 @@
 ''Objective case'': [[whom]]. 
 (Note that ''who'' is often used instead of ''whom'', especially in informal writing or conversation.)
 
-#what person or people; which person or people. (used in a direct or indirect question)
+# (''interrogative pronoun'') What person or people; which person or people (used in a direct or indirect question).
 #:''Who is that?'' (direct question)
 #:''I don't know who it is.'' (indirect question)
-#the person or people that (used as a [[relative pronoun]])
+# (''[[relative pronoun]]'') The person or people that. 
 #:''It was a nice man who helped us.''
 
 ===Noun===
