--- a/wiki/anonymous.wikitext
+++ b/wiki/anonymous.wikitext
@@ -11,6 +11,7 @@ pamphlet or letter.
 ==Related terms==
 *[[anonymously]].
 *[[anonymity]].
+*[[w:public domain|public domain]].
 *[[popular]].
 *[[unknown]].
 
