/* Latin */ Declension. <qui#66518>

--- a/wiki/qui.wikitext
+++ b/wiki/qui.wikitext
@@ -2,3 +2,72 @@
 ===Relative pronoun===
 '''qu&#299;''' ''m'', '''quae''' ''f'', '''quod''' ''n''
 # Who, what, that, which.
+
+====Declension====
+Irregular.
+{| cellpadding="5" border="1"
+!style="background:#47DCF8;"| ''Number''
+!style="background:#47DCF8;" colspan=3| ''Singular''
+|
+!style="background:#47DCF8;" colspan=3| ''Plural''
+|-
+<!--!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
+!style="background:#47DCF8;"| ''Gender'' <math> \rightarrow </math>--> 
+!style="background:#F1BC4E;"|''Case \ Gender''
+!style="background:#F1BC4E;"| ''M.''
+!style="background:#F1BC4E;"| ''F.''
+!style="background:#F1BC4E;"| ''N.''
+|
+!style="background:#F1BC4E;"| ''MM.''
+!style="background:#F1BC4E;"| ''FF.''
+!style="background:#F1BC4E;"| ''NN.''
+|-
+!style="background:#F1BC4E;"| ''Nominative''
+|style="background:#F5F5EE;"| <big>qu&#299;  
+|style="background:#F5F5EE;"| <big>quae 
+|style="background:#F5F5EE;"| <big>quod
+|
+|style="background:#F5F5EE;"| <big>qu&#299; 
+|style="background:#F5F5EE;"| <big>quae 
+|style="background:#F5F5EE;"| <big>quae
+|-
+!style="background:#F1BC4E;"| ''Genitive''
+|style="background:#F5F5EE;"| <big>cuius 
+|style="background:#F5F5EE;"| <big>cuius 
+|style="background:#F5F5EE;"| <big>cuius
+|
+|style="background:#F5F5EE;"| <big>qu&#333;rum  
+|style="background:#F5F5EE;"| <big>qu&#257;rum  
+
+|style="background:#F5F5EE;"| <big>qu&#333;rum
+|-
+!style="background:#F1BC4E;"| ''Dative''
+|style="background:#F5F5EE;"| <big>cui
+|style="background:#F5F5EE;"| <big>cui 
+|style="background:#F5F5EE;"| <big>cui
+|
+|style="background:#F5F5EE;"| <big>quibus 
+|style="background:#F5F5EE;"| <big>quibus 
+|style="background:#F5F5EE;"| <big>quibus
+|-
+!style="background:#F1BC4E;"| ''Accusative''
+|style="background:#F5F5EE;"| <big>quem 
+|style="background:#F5F5EE;"| <big>quam 
+|style="background:#F5F5EE;"| <big>quod
+|
+|style="background:#F5F5EE;"| <big>qu&#333;s 
+|style="background:#F5F5EE;"| <big>qu&#257;s 
+|style="background:#F5F5EE;"| <big>quae
+|-
+!style="background:#F1BC4E;"| ''Ablative''
+|style="background:#F5F5EE;"| <big>qu&#333; 
+|style="background:#F5F5EE;"| <big>qu&#257; 
+|style="background:#F5F5EE;"| <big>qu&#333;
+|
+|style="background:#F5F5EE;"| <big>quibus 
+|style="background:#F5F5EE;"| <big>quibus 
+|style="background:#F5F5EE;"| <big>quibus
+|}
+
+====Related words====
+*[[quis]]
