Related words. <quis#66514>

--- a/wiki/quis.wikitext
+++ b/wiki/quis.wikitext
@@ -65,3 +65,6 @@ Irregular.
 |style="background:#F5F5EE;"| <big>quibus 
 |style="background:#F5F5EE;"| <big>quibus
 |}
+
+====Related words====
+* [[qui]]
