--- a/wiki/quod.wikitext
+++ b/wiki/quod.wikitext
@@ -5,3 +5,9 @@
 '''quod'''
 
 #A quadrangle or court, as of a prison; hence, a prison.
+
+----
+
+==Latin==
+'''quod''' ''n''
+: Neuter of [[qui|qu&#299;]].
