/* Conjugation */ PluPerfect <debere#66511>

--- a/wiki/debere.wikitext
+++ b/wiki/debere.wikitext
@@ -184,7 +184,7 @@ Second conjugation (2).
 |style="background:#E7FEE9;"| d&#275;buer&#299;tis
 |style="background:#E7FEE9;"| d&#275;buerint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| d&#275;buissem
 |style="background:#E7FEE9;"| d&#275;buiss&#275;s
 |style="background:#E7FEE9;"| d&#275;buisset
