/* Conjugation */ PluPerfect <scire#54630>

--- a/wiki/scire.wikitext
+++ b/wiki/scire.wikitext
@@ -184,7 +184,7 @@ Fourth conjugation (4).
 |style="background:#E7FEE9;"| sc&#299;ver&#299;tis
 |style="background:#E7FEE9;"| sc&#299;verint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| sc&#299;vissem
 |style="background:#E7FEE9;"| sc&#299;viss&#275;s
 |style="background:#E7FEE9;"| sc&#299;visset
