/* Conjugation */ sp <doceo#48385>

--- a/wiki/doceo.wikitext
+++ b/wiki/doceo.wikitext
@@ -183,7 +183,7 @@ Second conjugation (2).
 |style="background:#E7FEE9;"| docuer&#299;tis
 |style="background:#E7FEE9;"| docuerint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| docuissem
 |style="background:#E7FEE9;"| docuiss&#275;s
 |style="background:#E7FEE9;"| docuisset
