--- a/wiki/dicere.wikitext
+++ b/wiki/dicere.wikitext
@@ -184,7 +184,7 @@ Third conjugation (3).
 |style="background:#E7FEE9;"| d&#299;xer&#299;tis
 |style="background:#E7FEE9;"| d&#299;xerint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| d&#299;xissem
 |style="background:#E7FEE9;"| d&#299;xiss&#275;s
 |style="background:#E7FEE9;"| d&#299;xisset
