/* Conjugation */ sp <ducere#66384>

--- a/wiki/ducere.wikitext
+++ b/wiki/ducere.wikitext
@@ -184,7 +184,7 @@ Third conjugation (3).
 |style="background:#E7FEE9;"| d&#363;xer&#299;tis
 |style="background:#E7FEE9;"| d&#363;xerint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| d&#363;xissem
 |style="background:#E7FEE9;"| d&#363;xiss&#275;s
 |style="background:#E7FEE9;"| d&#363;xisset
