--- a/wiki/cogito.wikitext
+++ b/wiki/cogito.wikitext
@@ -184,7 +184,7 @@ First conjugation (1).
 |style="background:#E7FEE9;"| c&#333;git&#257;ver&#299;tis
 |style="background:#E7FEE9;"| c&#333;git&#257;verint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| c&#333;git&#257;vissem
 |style="background:#E7FEE9;"| c&#333;git&#257;viss&#275;s
 |style="background:#E7FEE9;"| c&#333;git&#257;visset
