/* Conjugation */ sp <cantare#47627>

--- a/wiki/cantare.wikitext
+++ b/wiki/cantare.wikitext
@@ -203,7 +203,7 @@ First conjugation (1).
 |style="background:#E7FEE9;"| cant&#257;ver&#299;tis
 |style="background:#E7FEE9;"| cant&#257;verint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| cant&#257;vissem
 |style="background:#E7FEE9;"| cant&#257;viss&#275;s
 |style="background:#E7FEE9;"| cant&#257;visset
