/* Conjugation */ sp <canere#47625>

--- a/wiki/canere.wikitext
+++ b/wiki/canere.wikitext
@@ -182,7 +182,7 @@ Third conjugation (3).
 |style="background:#E7FEE9;"| ceciner&#299;tis
 |style="background:#E7FEE9;"| cecinerint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| cecinissem
 |style="background:#E7FEE9;"| ceciniss&#275;s
 |style="background:#E7FEE9;"| cecinisset
