--- a/wiki/quaerere.wikitext
+++ b/wiki/quaerere.wikitext
@@ -185,7 +185,7 @@ Third conjugation (3).
 |style="background:#E7FEE9;"| quaes&#299;ver&#299;tis
 |style="background:#E7FEE9;"| quaes&#299;verint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| quaes&#299;vissem
 |style="background:#E7FEE9;"| quaes&#299;viss&#275;s
 |style="background:#E7FEE9;"| quaes&#299;visset
