--- a/wiki/rogare.wikitext
+++ b/wiki/rogare.wikitext
@@ -200,7 +200,7 @@ First conjugation (1).
 |style="background:#E7FEE9;"| rog&#257;ver&#299;tis
 |style="background:#E7FEE9;"| rog&#257;verint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| rog&#257;vissem
 |style="background:#E7FEE9;"| rog&#257;viss&#275;s
 |style="background:#E7FEE9;"| rog&#257;visset
