/* Conjugation */ tp <minuo#66234>

--- a/wiki/minuo.wikitext
+++ b/wiki/minuo.wikitext
@@ -184,7 +184,7 @@ Third conjugation (3).
 |style="background:#E7FEE9;"| minuer&#299;tis
 |style="background:#E7FEE9;"| minuerint
 |-
-!style="background:#92B887;"|<small>''Pluerfect''
+!style="background:#92B887;"|<small>''Pluperfect''
 |style="background:#E7FEE9;"| minuissem
 |style="background:#E7FEE9;"| minuiss&#275;s
 |style="background:#E7FEE9;"| minuisset
