--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -1,36 +1,22 @@
 {{Wikipedia}}
-
-== Pronunciation ==	 	
-
+{{webster}}
+{{-en-}}
+===Pronunciation===
 \Pop"u*lar\
-== Adjective==
+===Adjective===
 See [[people]]
 
-1. Of or pertaining to the common people, or to the whole body of the people, as distinguished from a select portion; as, the popular voice; popular elections. 
- ``Popular states.'' --Bacon.
- ``So the popular vote inclines.'' --Milton.
- The men commonly held in popular estimation are greatest at a distance. --J. H.                                                 Newman.
+#Of or pertaining to the common people, or to the whole body of the people, as distinguished from a select portion; as, the popular voice; popular elections. 
+#:''So the popular vote inclines.'' --Milton.
 
-2. Suitable to common people; easy to be comprehended; not abstruse; familiar; plain.
+#Suitable to common people; easy to be comprehended; not abstruse; familiar; plain.
+#:''Homilies are plain popular instructions''. --Hooker.
 
- Homilies are plain popular instructions. --Hooker.
-
-3. Adapted to the means of the common people; possessed or obtainable by the many; hence, cheap; common; ordinary; inferior; as, popular prices; popular amusements.
-
- The smallest figs, called popular figs, . . . are,  of all others, the basest and of least account. --Holland.
-
-4. Beloved or approved by the people; pleasing to people in general, or to many people; as, a popular preacher; a popular law; a popular administration.
-
-5. Devoted to the common people; studious of the favor of the populace. [R.]
-
- Such popular humanity is treason.     --Addison.
-
-6. Prevailing among the people; epidemic; as, a popular disease. ([[Obs.]]) --Johnson.
-
-
-* [[w:Popular action|Popular action]] ([[Law]]): an action in which any person may sue for penalty imposed by statute. -- [[w:Blackstone]].
-
-
-See also: 
+#Adapted to the means of the common people; possessed or obtainable by the many; hence, cheap; common; ordinary; inferior; as, popular prices; popular amusements.
+#Beloved or approved by the people; pleasing to people in general, or to many people; as, a popular preacher; a popular law; a popular administration.
+#Devoted to the common people; studious of the favor of the populace. 
+#([[Obs.]])Prevailing among the people; epidemic; as, a popular disease. 
+* [[w:Popular action|Popular action]] ([[Law]]): an action in which any person may sue for penalty imposed by statute.
+===See also:=== 
 *[[anonymous]].
 *[[w:public domain|public domain]].
