--- a/wiki/popular.wikitext
+++ b/wiki/popular.wikitext
@@ -16,7 +16,7 @@ See [[people]]
 #Beloved or approved by the people; pleasing to people in general, or to many people; as, a popular preacher; a popular law; a popular administration.
 #Devoted to the common people; studious of the favor of the populace. 
 #([[Obs.]])Prevailing among the people; epidemic; as, a popular disease. 
-* [[w:Popular action|Popular action]] ([[Law]]): an action in which any person may sue for penalty imposed by statute.
+#[[w:Popular action|Popular action]] ([[Law]]): an action in which any person may sue for penalty imposed by statute.
 ===See also:=== 
 *[[anonymous]].
 *[[w:public domain|public domain]].
