--- a/wiki/quidam.wikitext
+++ b/wiki/quidam.wikitext
@@ -73,3 +73,74 @@ Irregular.
 |style="background:#F5F5EE;"| quibusdam 
 |style="background:#F5F5EE;"| quibusdam
 |}
+
+
+===Adjective===
+'''qu&#299;dam''' ''m'', '''quaedam''' ''f'', '''quoddam''' ''n''
+# Certain, some.
+
+====Declension====
+Irregular.
+{| cellpadding="5" border="1"
+!style="background:#47DCF8;"| ''Number''
+!style="background:#47DCF8;" colspan=3| ''Singular''
+|
+!style="background:#47DCF8;" colspan=3| ''Plural''
+|-
+<!--!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
+!style="background:#47DCF8;"| ''Gender'' <math> \rightarrow </math>--> 
+!style="background:#F1BC4E;"|''Case \ Gender''
+!style="background:#F1BC4E;"| ''M.''
+!style="background:#F1BC4E;"| ''F.''
+!style="background:#F1BC4E;"| ''N.''
+|
+!style="background:#F1BC4E;"| ''MM.''
+!style="background:#F1BC4E;"| ''FF.''
+!style="background:#F1BC4E;"| ''NN.''
+|-
+!style="background:#F1BC4E;"| ''Nominative''
+|style="background:#F5F5EE;"| qu&#299;dam  
+|style="background:#F5F5EE;"| quaedam 
+|style="background:#F5F5EE;"| quoddam
+|
+|style="background:#F5F5EE;"| qu&#299;dam 
+|style="background:#F5F5EE;"| quaedam 
+|style="background:#F5F5EE;"| quaedam
+|-
+!style="background:#F1BC4E;"| ''Genitive''
+|style="background:#F5F5EE;"| cuiusdam 
+|style="background:#F5F5EE;"| cuiusdam 
+|style="background:#F5F5EE;"| cuiusdam
+|
+|style="background:#F5F5EE;"| qu&#333;rundam  
+|style="background:#F5F5EE;"| qu&#333;rundam  
+
+|style="background:#F5F5EE;"| qu&#333;rundam
+|-
+!style="background:#F1BC4E;"| ''Dative''
+|style="background:#F5F5EE;"| cuidam 
+|style="background:#F5F5EE;"| cuidam 
+|style="background:#F5F5EE;"| cuidam
+|
+|style="background:#F5F5EE;"| quibusdam 
+|style="background:#F5F5EE;"| quibusdam 
+|style="background:#F5F5EE;"| quibusdam
+|-
+!style="background:#F1BC4E;"| ''Accusative''
+|style="background:#F5F5EE;"| quendam 
+|style="background:#F5F5EE;"| quandam 
+|style="background:#F5F5EE;"| quoddam
+|
+|style="background:#F5F5EE;"| qu&#333;sdam 
+|style="background:#F5F5EE;"| qu&#257;sdam 
+|style="background:#F5F5EE;"| quaedam
+|-
+!style="background:#F1BC4E;"| ''Ablative''
+|style="background:#F5F5EE;"| qu&#333;dam 
+|style="background:#F5F5EE;"| qu&#257;dam 
+|style="background:#F5F5EE;"| qu&#333;dam
+|
+|style="background:#F5F5EE;"| quibusdam 
+|style="background:#F5F5EE;"| quibusdam 
+|style="background:#F5F5EE;"| quibusdam
+|}
