/* Verb */ Consolidate three definitions into one. <explain#58795>

--- a/wiki/explain.wikitext
+++ b/wiki/explain.wikitext
@@ -2,9 +2,7 @@
 ===Verb===
 '''to explain''' ([[explains]], [[explained]], [[explaining]])
 
-# To give a sufficiently detailed report about the reason for something, about why something happened, about a causal chain of events.
-# To give a sufficiently detailed report about how something works, about how elements in a system interact.
-# To give a sufficiently detailed report about how to do something, about the steps which need to be accomplished in order to accomplish a certain goal.
+# To give a sufficiently detailed report about ''(a)'' the reason for something, about why something happened, about a causal chain of events; about ''(b)'' how something works, about how elements in a system interact; about ''(c)'' how to do something, about the steps which need to be accomplished in order to accomplish a certain goal.  
 # To give a valid excuse for some past behavior.
 
 ====Related terms====
