--- a/wiki/quidam.wikitext
+++ b/wiki/quidam.wikitext
@@ -77,7 +77,7 @@ Irregular.
 
 ===Adjective===
 '''qu&#299;dam''' ''m'', '''quaedam''' ''f'', '''quoddam''' ''n''
-# Certain (person or thing), some (person or thing).
+# [[Certain]] (person or thing), some (person or thing).
 
 ====Declension====
 Irregular.
