--- a/wiki/insula.wikitext
+++ b/wiki/insula.wikitext
@@ -1,6 +1,33 @@
 ==Latin==
 ===Noun===
 '''insula''' ''f'' (Plural: [[insulae]])
-
 #an [[island]]
-#a block of [[appartments]] usually for the lower-class
+#a block of [[apartment|appartments]], usually for the lower-class
+
+====Declension====
+First declension (1).
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''F.''
+!style="background:#C0C0C0;"| ''FF.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+|style="background:#F5F5F5;"| <big> insula
+|style="background:#F5F5F5;"| <big> insulae
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+|style="background:#F5F5F5;"| <big> insulae
+|style="background:#F5F5F5;"| <big> insul&#257;rum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+|style="background:#F5F5F5;"| <big> insulae
+|style="background:#F5F5F5;"| <big> insul&#299;s
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+|style="background:#F5F5F5;"| <big> insulam
+|style="background:#F5F5F5;"| <big> insul&#257;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+|style="background:#F5F5F5;"| <big> insul&#257;
+|style="background:#F5F5F5;"| <big> insul&#299;s
+|}
