/* Translations */ +Latin <farmer#37059>

--- a/wiki/farmer.wikitext
+++ b/wiki/farmer.wikitext
@@ -15,6 +15,7 @@
 *[[French]]: [[fermier]] ''m''
 *[[German]]: [[Bauer]] ''m'' (crops), [[Züchter]] ''m'' (livestock)
 *[[Italian]]: [[agricoltore]] ''m'', [[fattore]] ''m''
+*[[Latin]]: [[agricola]] ''m''
 *[[Portuguese]]: [[fazendeiro]] ''m''
 *[[Russian]]: [[крeстянин]],  [[фeрмeр]]  ''m''
 *[[Slovak]]: [[roľník]], [[sedliak]], [[poľnohospodár]], [[farmár]]  ''m''
