/* Latin */ Declension. <agricola#38507>

--- a/wiki/agricola.wikitext
+++ b/wiki/agricola.wikitext
@@ -6,14 +6,42 @@
 
 This word is unusual in that it is [[first declension]] but masculine.
 
-[[Category:Latin masculine nouns in the first declension]]
+====Declension====
+First declension (1).
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''M.''
+!style="background:#C0C0C0;"| ''MM.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+|style="background:#F5F5F5;"| <big> agricola
+|style="background:#F5F5F5;"| <big> agricolae
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+|style="background:#F5F5F5;"| <big> agricolae
+|style="background:#F5F5F5;"| <big> agricol&#257;rum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+|style="background:#F5F5F5;"| <big> agricolae
+|style="background:#F5F5F5;"| <big> agricol&#299;s
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+|style="background:#F5F5F5;"| <big> agricolam
+|style="background:#F5F5F5;"| <big> agricol&#257;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+|style="background:#F5F5F5;"| <big> agricol&#257;
+|style="background:#F5F5F5;"| <big> agricol&#299;s
+|}
 
 ====Derived Words====
 : [[agricolor]]
+=====English=====
 : [[agriculture]]
 
 ====Related Words====
 : [[ager]] ''field''
+[[Category:Latin masculine nouns in the first declension]]
 ----
 
 ==[[Romanica]]==
