--- a/wiki/agricola.wikitext
+++ b/wiki/agricola.wikitext
@@ -47,8 +47,15 @@ First declension (1).
 ==[[Romanica]]==
 ===Noun===
 <b>agricola</b>
-#[[agriculturalist]]
+#[[Agriculturalist]].
 
 ===Adjective===
 <b>agricola</b>
-#[[agricultural]]
+#[[Agricultural]].
+
+----
+
+==Spanish==
+===Adjective===
+'''agricola'''
+#[[Agricultural]].
