--- a/wiki/%D0%9A%D0%93%D0%91.wikitext
+++ b/wiki/%D0%9A%D0%93%D0%91.wikitext
@@ -1,6 +1,6 @@
 ==Russian==
 ===Abbreviation===
-*[[Комитет Государственной Безопасности]] (''Committee of State Defense'')?
+*[[Комитет Государственной Безопасности]] (''State Security Committee'')?
 
 ===Translations===
 *{{cz}}: [[KGB]]
