/* Translations */ +French +German +Latin +Spanish <sailor#62528>

--- a/wiki/sailor.wikitext
+++ b/wiki/sailor.wikitext
@@ -6,4 +6,8 @@
 
 #One who follows the business of navigating ships or other vessels; one who understands the practical management of ships; one of the crew of a vessel; a mariner; a common seaman.
 ====Translations====
+*French: [[marin]] ''m''
+*German: [[seemann]] ''m''
+*Latin: [[nauta]] ''m''
+*Spanish: [[marinero]] ''m''
 *{{ro}}: [[marinar]], [[matelot]]
