/* Latin */ Derived words. <nauta#50421>

--- a/wiki/nauta.wikitext
+++ b/wiki/nauta.wikitext
@@ -9,14 +9,23 @@ From Germanic, cf. Swedish ''nöt'', English ''neat''.
 -----
 
 ==Latin==
+===Pronunciation===
+*[[AHD]]: <big> n&#259;-<math>\overline{oo}</math>&prime; t&#259;</big>
+
 ===Noun===
 '''nauta''' ''m'' ''[[Wiktionary Appendix:Latin first declension|1st declension]]
+#A [[sailor]].
 
-#a [[sailor]]
-===Synonyms===
+====Synonyms====
 *(''poetic'') [[navita]]
-===Related Words===
+
+====Related words====
 *[[nauticalis]]
 *[[navis]]
+
+====Derived words====
+=====English=====
+*[[astronaut]]
+*[[nautical]]
 
 [[Category:Latin masculine nouns in the first declension]]
