--- a/wiki/monk.wikitext
+++ b/wiki/monk.wikitext
@@ -18,7 +18,7 @@ From Latin ''[[monachus]]'', from Greek ''[[monachos]]'', '''monk''' or single p
 *[[Esperanto]]: [[monaĥo]] ''m''
 *[[Finnish]]: [[munkki]] (3)
 *German: [[Mönch]] ''m''
-*Hungarian: [[szerzetes]]
+*{{hu}}: [[:hu:szerzetes|szerzetes]]
 *Indonesian: [[biarawan]]
 *Italian: [[monaco]] ''m''
 *Latin: [[monachus]] ''m''
