--- a/wiki/nauta.wikitext
+++ b/wiki/nauta.wikitext
@@ -13,8 +13,38 @@ From Germanic, cf. Swedish ''nöt'', English ''neat''.
 *[[AHD]]: <big> n&#259;-<math>\overline{oo}</math>&prime; t&#259;</big>
 
 ===Noun===
-'''nauta''' ''m'' ''[[Wiktionary Appendix:Latin first declension|1st declension]]
+'''nauta''' ''m'' 
 #A [[sailor]].
+
+====Declension====
+[[Wiktionary Appendix:Latin first declension|First declension]] (1).<br>
+This declension is unusual for a masculine noun.<br>
+
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Case \ #''
+!style="background:#C0C0C0;"| ''M.''
+!style="background:#C0C0C0;"| ''MM.''
+|-
+!style="background:#C0C0C0;"| ''Nominative''
+|style="background:#F5F5F5;"| <big> nauta
+|style="background:#F5F5F5;"| <big> nautae
+|-
+!style="background:#C0C0C0;"| ''Genitive''
+|style="background:#F5F5F5;"| <big> nautae
+|style="background:#F5F5F5;"| <big> naut&#257;rum
+|-
+!style="background:#C0C0C0;"| ''Dative''
+|style="background:#F5F5F5;"| <big> nautae
+|style="background:#F5F5F5;"| <big> naut&#299;s
+|-
+!style="background:#C0C0C0;"| ''Accusative''
+|style="background:#F5F5F5;"| <big> nautam
+|style="background:#F5F5F5;"| <big> naut&#257;s
+|-
+!style="background:#C0C0C0;"| ''Ablative''
+|style="background:#F5F5F5;"| <big> naut&#257;
+|style="background:#F5F5F5;"| <big> naut&#299;s
+|}
 
 ====Synonyms====
 *(''poetic'') [[navita]]
