--- a/wiki/EULA.wikitext
+++ b/wiki/EULA.wikitext
@@ -1,7 +1,7 @@
 ===Acronym===
 '''EULA'''
 
-#End User License Agreement
+#End User [[License]] Agreement
 
 ===See also===
 [[w:EULA|Wikipedia's article on EULA]]
