--- a/wiki/marinero.wikitext
+++ b/wiki/marinero.wikitext
@@ -2,4 +2,4 @@
 ===Noun===
 '''marinero''' (''plural'' '''marineros''')
 # [[Sailor]].
-#: ''"Yo no soy marinero, soy capit&aacute;n."'' : "I am not a sailor, I am a captain." (Part of the lyrics of the song ''La Bamba''.)
+#: ''"Yo no soy marinero; soy capit&aacute;n."'' : "I'm not a sailo; I'm a captain." (Part of the lyrics of the song ''La Bamba''.)
