--- a/wiki/soy.wikitext
+++ b/wiki/soy.wikitext
@@ -48,7 +48,7 @@
 
 ===Verb===
 # I am.
-#: ''Yo no soy marinero; soy capitan.''
+#: ''Yo no soy [[marinero]]; soy capit&aacute;n.''
 
 ===Related Terms===
 *[[ser]]
