--- a/wiki/marinero.wikitext
+++ b/wiki/marinero.wikitext
@@ -1,5 +1,5 @@
 ==Spanish==
 ===Noun===
-'''marinero''' (''plural'' '''marineros''')
+'''marinero''' ''m'' (''plural'' '''marineros''')
 # [[Sailor]].
 #: ''"Yo no soy marinero; soy capit&aacute;n."'' : "I'm not a sailor; I'm a captain." (Part of the lyrics of the song ''La Bamba''.)
