--- a/wiki/runner.wikitext
+++ b/wiki/runner.wikitext
@@ -5,6 +5,8 @@
 # a type of soft-soled shoe, a sneaker
 # a forward playing position in the sport of [[scuffleball]]
 
+*{{hu}}: [[:hu:futó|futó]]
+
 ====Synonyms====
 *[[sneaker]]
 
