--- a/wiki/airport.wikitext
+++ b/wiki/airport.wikitext
@@ -8,6 +8,7 @@
 *Bulgarian: [[летище]] (letishte)
 *Chinese: [[飞机场]] (fei1ji1chang3)
 *German: [[Flughafen]] ''m''
+*{{hu}}: [[:hu:repülőtér|repülőtér]]
 *Macedonian: [[аеродром]] (aerodrom)
 *Portuguese: [[aeroporto]] ''m''
 
