--- a/wiki/animal.wikitext
+++ b/wiki/animal.wikitext
@@ -35,6 +35,7 @@
 *French: animal ''m'', bête ''f''
 *German: [[Tier#German|Tier]] ''n''
 *Hebrew: [[בעל חיים]] ''m''
+*{{hu}}: [[:hu:állat|állat]]
 *Icelandic: [[dýr]] ''n''
 *Indonesian: [[hewan]], [[binatang]]
 *[[Interlingua]]: animal, [[bestia]]
