--- a/wiki/agricola.wikitext
+++ b/wiki/agricola.wikitext
@@ -46,11 +46,13 @@ First declension (1).
 
 ==[[Romanica]]==
 ===Noun===
-<b>agricola</b>
+'''agricola'''
+
 #[[Agriculturalist]].
 
 ===Adjective===
-<b>agricola</b>
+'''agricola'''
+
 #[[Agricultural]].
 
 ----
@@ -58,4 +60,5 @@ First declension (1).
 ==Spanish==
 ===Adjective===
 '''agricola'''
+
 #[[Agricultural]].
