+rel & see also & rhyme <hippie#38571>

--- a/wiki/hippie.wikitext
+++ b/wiki/hippie.wikitext
@@ -1,7 +1,7 @@
 ==English==
-
 ===Pronunciation===
-*hĭp'ē, /ˈhɪpi/, /"hIpi/
+*hĭp'i, /ˈhɪpi/, /<tt>"hIpi</tt>/
+*:[[Rhymes:English:-ɪpi|Rhymes: -ɪpi]]
 
 ===Alternative spellings===
 *[[hippy]]
@@ -17,12 +17,18 @@
 ====Synonyms====
 *[[beatnik]]
 
+====Related terms====
+*[[hip]]<!-- definitely related? -->
+
 ====Translations====
 *Chinese: [[嬉皮]]
 *Finnish: [[hippi]] (1, 3, 4)
 *German: Hippie ''m''
 *Japanese: [[ヒッピー]] (hippii)
 *Korean: [[히피]]
+
+===See also===
+*[[feral]]
 
 ----
 
