Definition. <parental love#66527>

--- a/wiki/parental_love.wikitext
+++ b/wiki/parental_love.wikitext
@@ -1,1 +1,5 @@
-parental love
+==English==
+===Noun phrase===
+'''parental love'''
+# The love of parents towards their children.
+# By extension, love which is similar to parental love.
