--- a/wiki/dentist.wikitext
+++ b/wiki/dentist.wikitext
@@ -1,2 +1,10 @@
+==English==
+===Noun===
+'''dentist''' (''plural'' '''dentists''')
+# A medical doctor who specializes in fixing a person's teeth.
 
-*{{hu}}: [[:hu:fogorvos|fogorvos]]
+====Translations====
+*French: [[dentiste]] 
+*German: [[Zahnartz]] 
+*{{hu}}: [[fogorvos]]
+*Spanish: [[dentista]]
