/* Contraction */ <you're#5681>

--- a/wiki/you%27re.wikitext
+++ b/wiki/you%27re.wikitext
@@ -18,3 +18,9 @@
 #:''You're almost as smart as I am.''
 
 <!--only add translations if they are contractions too-->
+
+===Contraction===
+'''you're''' 
+
+#[[You]] [[were]]
+#:''You're reading slashdot, weren't you?''
