--- a/wiki/playground.wikitext
+++ b/wiki/playground.wikitext
@@ -1,2 +1,8 @@
+==English==
+===Noun===
+'''playground'''
+# A large open space where children play.
 
+====Translations====
+*French: [[cour]] [[de]] [[r&eacute;cr&eacute;ation]]
 *{{hu}}: [[:hu:játszótér|játszótér]]
