--- a/wiki/sailor.wikitext
+++ b/wiki/sailor.wikitext
@@ -6,8 +6,11 @@
 
 #One who follows the business of navigating ships or other vessels; one who understands the practical management of ships; one of the crew of a vessel; a mariner; a common seaman.
 ====Translations====
+*Chinese: [[水手]], [[海员]]
 *French: [[marin]] ''m''
 *German: [[seemann]] ''m''
+*Italian: [[marinaio]] ''m''
+*Japanese: [[船員]], [[水夫]], [[船乗り]], [[水兵]]
 *Latin: [[nauta]] ''m''
 *Spanish: [[marinero]] ''m''
 *{{ro}}: [[marinar]], [[matelot]]
