--- a/wiki/soy.wikitext
+++ b/wiki/soy.wikitext
@@ -1,10 +1,12 @@
 ==English==
+===Variant form===
+*[[soya]]
 ===Noun===
 '''soy''' 
 
 # (''uncountable'') A Chinese and Japanese liquid sauce for fish, made by subjecting boiled beans to long fermentation and then long digestion in salt and water.  US usage prefers [[soy sauce]].
 #: ''I like a little soy with my rice.''
-# (''uncountable'') Soy beans.  Often used attributively.
+# (''uncountable'') [[Soybean]]s.  Often used attributively.
 #: ''These candles are made from soy.''
 #: ''The soy crop is looking good this year.''
 
@@ -29,13 +31,13 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
+
 *{{fi}}: [[soija]], [[soijapapu]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+
 |}
 |}
 
@@ -44,8 +46,9 @@
 *[[soy milk]]
 *[[soy sauce]]
 
-==Spanish==
+----
 
+==Spanish==
 ===Verb===
 # I am.
 #: ''Yo no soy [[marinero]]; soy capit&aacute;n.''
