/* Derived Words */ <agricola#38507>

--- a/wiki/agricola.wikitext
+++ b/wiki/agricola.wikitext
@@ -34,10 +34,13 @@ First declension (1).
 |style="background:#F5F5F5;"| <big> agricol&#299;s
 |}
 
-====Derived Words====
+====Derived terms====
 : [[agricolor]]
 =====English=====
 : [[agriculture]]
+=====Itlaian=====
+*[[agricolo]]
+*[[agricoltura]]
 
 ====Related Words====
 : [[ager]] ''field''
