def, trans <skier#66530>

--- a/wiki/skier.wikitext
+++ b/wiki/skier.wikitext
@@ -1,1 +1,10 @@
-*{{hu}}: [[:hu:síelő|síelő]]
+==English==
+===Noun===
+'''skier'''
+# Someone who practices [[ski|skiing]]. 
+
+====Translations====
+*French: [[skieur]] ''m'', [[skieuse]] ''f''
+*German: [[Skifahrer]] ''m'', [[Skifahrerin]] ''f''
+*{{hu}}: [[síelő]]
+*Spanish: [[esquiador]]
