--- a/wiki/dentist.wikitext
+++ b/wiki/dentist.wikitext
@@ -4,7 +4,10 @@
 # A medical doctor who specializes in fixing a person's teeth.
 
 ====Translations====
+*Chinese: [[牙医]] (yayi)
 *French: [[dentiste]] 
 *German: [[Zahnartz]] 
 *{{hu}}: [[fogorvos]]
+*Italian: [[dentista]]
+*Japanese: [[歯医者]], [[歯科医]]
 *Spanish: [[dentista]]
