--- a/wiki/dentist.wikitext
+++ b/wiki/dentist.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+Latin ''[[dens]]'', [[-ist]]
 ===Noun===
 '''dentist''' (''plural'' '''dentists''')
 # A medical doctor who specializes in fixing a person's teeth.
@@ -11,3 +13,8 @@
 *Italian: [[dentista]]
 *Japanese: [[歯医者]], [[歯科医]]
 *Spanish: [[dentista]]
+
+===Related terms===
+*[[dental]]
+*[[dentistry]]
+*[[denture]]
