--- a/wiki/dent.wikitext
+++ b/wiki/dent.wikitext
@@ -18,3 +18,21 @@
 
 ===Related terms===
 *[[dental]]
+
+----
+
+==French==
+===Noun===
+'''dent''' ''f''
+
+# [[tooth]]
+
+===Related terms===
+*[[dentaire]]
+*[[dental]]
+*[[dent-de-lion]]
+*[[denté]]
+*[[dentifrice]]
+*[[dentiste]]
+*[[dentition]]
+*[[denture]]
