/* Adjective */ def <ski#41966>

--- a/wiki/ski.wikitext
+++ b/wiki/ski.wikitext
@@ -1,7 +1,7 @@
-=== Adjective ===
+=== Verb ===
 '''ski'''
 
-#Move using skis.
+#To slide down a snow-covered mountain slope wearing special elongated and flat footwear called skis which reduce or shield against friction and make the riding smooth, enabling the person performing this action to maintain balance (erect bodily posture) and to control the direction of the downward slide.
 
 === Translations ===
 *[[Finnish]]: [[hiihtää]]
