/* Noun */ def <ski#41966>

--- a/wiki/ski.wikitext
+++ b/wiki/ski.wikitext
@@ -9,7 +9,7 @@
 === Noun ===
 '''ski''' (plural skis)
 
-#Pair of these is used for skiing.
+#Pair of elongated and flat footwear used for skiing.
 
 === Translations ===
 *[[Finnish]]: [[suksi]]
