--- a/wiki/dental.wikitext
+++ b/wiki/dental.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Etymology===
 New Latin [[dentalis]], derived from [[dens]] "tooth", from Proto-Indo-European ''*H₁d-ent-'' "tooth", participle of ''*H₁ed-'' "eat", perhaps from an older sense "bite".
 
@@ -17,3 +18,14 @@ New Latin [[dentalis]], derived from [[dens]] "tooth", from Proto-Indo-European 
 # of or concerning the teeth: ''dental care'' 
 # of or concerning dentistry
 # (''linguistics'') made with the tongue touching the teeth: ''dental fricative''
+
+----
+==French==
+===Adjective===
+'''dental''' ''m'', '''[[dentale]]''' ''f'', '''[[dentaux]]''' ''m plural'', '''[[dentales]]''' ''f plural''
+
+#(''linguistics'') dental
+
+===Related terms===
+*[[dent]
+*[[dentaire]]
