/* Related terms */ <dental#46460>

--- a/wiki/dental.wikitext
+++ b/wiki/dental.wikitext
@@ -27,5 +27,5 @@ New Latin [[dentalis]], derived from [[dens]] "tooth", from Proto-Indo-European 
 #(''linguistics'') dental
 
 ===Related terms===
-*[[dent]
+*[[dent]]
 *[[dentaire]]
