/* Translations */ Please include romaji. <dentist#66528>

--- a/wiki/dentist.wikitext
+++ b/wiki/dentist.wikitext
@@ -11,7 +11,7 @@ Latin ''[[dens]]'', [[-ist]]
 *German: [[Zahnartz]] 
 *{{hu}}: [[fogorvos]]
 *Italian: [[dentista]]
-*Japanese: [[歯医者]], [[歯科医]]
+*Japanese: [[歯医者]] (haisha), [[歯科医]]
 *Spanish: [[dentista]]
 
 ===Related terms===
