--- a/wiki/aeroplane.wikitext
+++ b/wiki/aeroplane.wikitext
@@ -20,6 +20,7 @@ From Latin ''[[aero-]]'', combining form for '''air''' + Latin ''[[planum]]'', '
 
 ====Translations====
 *Breton: [[karr-nij]] ''m'' kirri-nij ''pl'', [[nijerez]] ''f'' -ioù ''pl''
+*Chinese: [[飞机]]
 *Czech: [[letadlo]] ''n'' (letadla ''pl'')
 *Danish: [[flyvemaskine]]
 *Dutch: [[vliegtuig]] ''n''
@@ -32,7 +33,7 @@ From Latin ''[[aero-]]'', combining form for '''air''' + Latin ''[[planum]]'', '
 *[[Hebrew]]: [[מָטוֹס]] ''m'' [[אֲוִירוֹן]] ''m''
 *[[Interlingua]]: [[avion]], [[aeroplano]]
 *Italian: [[aereo]] ''m''
-*Japanese: [[飛行機]] ([[ひこうき]], hikōki), [[航空機]] ([[こうくうき]], kōkuuki)
+*Japanese: [[飛行機]] (ひこうき, hikōki), [[航空機]] (こうくうき, kōkuuki)
 *Latin: [[aeroplanum]]
 *Lithuanian: [[lėktuvas]] ''m'', [[aeroplanas]] ''m'' (archaic)
 *Persian: [[هَواپَيما]] (hævāpeymā)
