--- a/wiki/aeroplane.wikitext
+++ b/wiki/aeroplane.wikitext
@@ -5,7 +5,7 @@ NOTE - If you make edits to this page, please also make corresponding edits to t
 -->
 ==English==
 ===Etymology===
-From Latin ''[[aero-]]'', combining form for '''air''' + Latin ''[[planum]]'', '''flat'''
+From Latin ''[[aero-]]'', combining form for '''air''' + plane, from Latin ''[[planum]]'', '''flat'''
 
 ===Noun===
 '''aeroplane''' (''British'') (''plural'' '''aeroplanes''')
