--- a/wiki/rupes.wikitext
+++ b/wiki/rupes.wikitext
@@ -1,1 +1,5 @@
 '''Rupes''' is the [[Latin]] word for 'cliff'. It is used in [[planetary geology]] to refer to [[escarpment|escarpments]] on other [[planet|planets]] and [[natural satellite|moons]].
+
+{{stub}}
+
+[[Category:Landforms]]
