--- a/wiki/ski.wikitext
+++ b/wiki/ski.wikitext
@@ -5,6 +5,9 @@
 
 === Translations ===
 *[[Finnish]]: [[hiihtää]]
+*[[French]]: [[skier]]
+*[[German]]: [[Ski]] [[fahren]]
+*[[Spanish]]: [[esquiar]]
 
 === Noun ===
 '''ski''' (plural skis)
@@ -13,3 +16,6 @@
 
 === Translations ===
 *[[Finnish]]: [[suksi]]
+*[[French]]: [[ski]] ''m''
+*[[German]]: [[Ski]] ''m''
+*[[Spanish]]: [[esqu&iacute;]] ''m''
